--- a/custom_components/samsvolleyball/translations/en.json
+++ b/custom_components/samsvolleyball/translations/en.json
@@ -15,22 +15,28 @@
                     "name": "Sensor name",
                     "host": "Host",
                     "region": "Association",
-                    "baden": "Nordbaden & Südbaden",
-                    "bvv": "Brandenburg",
-                    "dvv": "DVV - Dritte Liga und RL Nord",
-                    "flvb": "Luxemburg",
-                    "hvbv": "Hamburg",
-                    "hvv": "Hessen",
-                    "nwvv": "Nordwestdeutscher Volleyball-Verband",
-                    "shvv": "Schleswig-Holstein",
-                    "ssvb": "Sachsen",
-                    "svv": "Saarland",
-                    "tvv": "Thüringen",
-                    "vbl": "VBL - 1./2. Bundesliga",
-                    "vmv": "Mecklenburg-Vorpommern",
-                    "vlw": "Württemberg",
-                    "vvb": "Berlin",
-                    "vvrp": "Rheinland-Pfalz"
+                },
+                "selector": {
+                    "region": {
+                        "options": {
+                            "baden": "Nordbaden & Südbaden",                    
+                            "bvv": "Brandenburg",
+                            "dvv": "DVV - Dritte Liga und RL Nord",
+                            "flvb": "Luxemburg",
+                            "hvbv": "Hamburg",
+                            "hvv": "Hessen",
+                            "nwvv": "Nordwestdeutscher Volleyball-Verband",
+                            "shvv": "Schleswig-Holstein",
+                            "ssvb": "Sachsen",
+                            "svv": "Saarland",
+                            "tvv": "Thüringen",
+                            "vbl": "VBL - 1./2. Bundesliga",
+                            "vmv": "Mecklenburg-Vorpommern",
+                            "vlw": "Württemberg",
+                            "vvb": "Berlin",
+                            "vvrp": "Rheinland-Pfalz"
+                        }
+                    }
                 }
             },
             "league": {
